# jupyterWith_poetry2nix

./: .envrc  README.md  flake.nix  pyproject.toml
